Swagger with tests and es6
