# api/swagger/swagger.yaml
@@ -1,7 +1,7 @@
 swagger: "2.0"
 info:
   version: "0.0.1"
-  title: Hello World App
+  title: phings API
 # during dev, should point to your local machine
 host: localhost:10010
 # basePath prefixes all resource paths 
@@ -18,6 +18,27 @@ consumes:
 produces:
   - application/json
 paths:
+  /authTokens:
+    x-swagger-router-controller: authenticate
+    post:
+      description: create jwt for use in api calls
+      operationId: createToken
+      parameters:
+        - name: credentials
+          in: body
+          description: the credentials
+          required: true
+          schema:
+            $ref: "#/definitions/CredentialsRequest"
+      responses:
+        "201":
+          description: Success
+          schema:
+            $ref: "#/definitions/TokenResponse"
+        default:
+          description: Error
+          schema:
+            $ref: "#/definitions/ErrorResponse"      
   /hello:
     # binds a127 app logic to a route
     x-swagger-router-controller: hello_world
@@ -46,6 +67,21 @@ paths:
     x-swagger-pipe: swagger_raw
 # complex objects have schema definitions
 definitions:
+  CredentialsRequest:
+    properties:
+      userName:
+        type: string
+      password:
+        type: string
+    required:
+      - password
+      - userName
+  TokenResponse:
+    required:
+       - token
+    properties:
+      token:
+        type: string
   HelloWorldResponse:
     required:
       - message
